--- a/iOS-combine/Modules/Calling/Xib/IncomingCall.xib
+++ b/iOS-combine/Modules/Calling/Xib/IncomingCall.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="IncomingCall" customModule="iOS_combine" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="IncomingCall" customModule="IOS_combine" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -20,7 +19,7 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTu-T8-raT">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                            <state key="normal" image="StopVideo"/>
+                            <state key="normal" image="stopvideo"/>
                             <connections>
                                 <action selector="didTapAccept:" destination="iN0-l3-epB" eventType="touchUpInside" id="5mM-gL-UTh"/>
                             </connections>
@@ -74,9 +73,9 @@
         </view>
     </objects>
     <resources>
-        <image name="StopVideo" width="60" height="60"/>
         <image name="end" width="60" height="60"/>
         <image name="noun" width="100" height="100"/>
+        <image name="stopvideo" width="60" height="60"/>
         <namedColor name="AppGreyColor">
             <color red="0.5607843137254902" green="0.56470588235294117" blue="0.56470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
