--- a/iOS-combine/Modules/Contact/Contact.storyboard
+++ b/iOS-combine/Modules/Contact/Contact.storyboard
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Contact View Controller-->
-        <scene sceneID="wj9-b2-6Q8">
+        <scene sceneID="m4e-vi-aCU">
             <objects>
-                <viewController storyboardIdentifier="ContactViewController" id="yNj-G0-2LL" customClass="ContactViewController" customModule="Chat_Demo_IOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="E8v-Hc-GEB">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController storyboardIdentifier="ContactViewController" id="S6g-Ao-YbT" customClass="ContactViewController" customModule="IOS_combine" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="39t-MY-f5h">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tRU-Ls-p8w">
-                                <rect key="frame" x="0.0" y="44" width="414" height="173"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XUc-K2-kPR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="168"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rIm-Ts-DgR">
-                                        <rect key="frame" x="16" y="0.0" width="382" height="106"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="MUi-Is-aH5">
+                                        <rect key="frame" x="16" y="0.0" width="343" height="101"/>
                                         <subviews>
-                                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="Xmd-ro-ch3">
-                                                <rect key="frame" x="0.0" y="0.0" width="382" height="56"/>
+                                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="Dhz-ek-fv1">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="51"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </searchBar>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="WMQ-IC-nM1">
-                                                <rect key="frame" x="0.0" y="76" width="382" height="30"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ENC-9X-rPA">
+                                                <rect key="frame" x="0.0" y="71" width="343" height="30"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group-chat" translatesAutoresizingMaskIntoConstraints="NO" id="PHQ-r8-f5D">
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group-chat" translatesAutoresizingMaskIntoConstraints="NO" id="VgR-O3-MN1">
                                                         <rect key="frame" x="0.0" y="0.0" width="32" height="30"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="mvH-Dd-fJo"/>
-                                                            <constraint firstAttribute="width" constant="32" id="zNg-7V-3XJ"/>
+                                                            <constraint firstAttribute="height" constant="30" id="T0A-Pq-rw6"/>
+                                                            <constraint firstAttribute="width" constant="32" id="ZCE-2U-ngl"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ibs-ai-geR">
-                                                        <rect key="frame" x="46" y="0.0" width="336" height="30"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRr-XA-nV6">
+                                                        <rect key="frame" x="46" y="0.0" width="297" height="30"/>
                                                         <state key="normal" title="Add Group Chat"/>
                                                         <connections>
-                                                            <action selector="didTapAddContact:" destination="yNj-G0-2LL" eventType="touchUpInside" id="iXX-Tr-VcT"/>
+                                                            <action selector="didTapAddContact:" destination="S6g-Ao-YbT" eventType="touchUpInside" id="tys-3G-vlD"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4pI-Ci-elF">
-                                        <rect key="frame" x="36" y="122" width="342" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohh-oJ-rwU">
+                                        <rect key="frame" x="36" y="117" width="303" height="1"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="OWD-SF-IHe"/>
+                                            <constraint firstAttribute="height" constant="1" id="DoK-iB-oFu"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contacts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvh-ri-evY">
-                                        <rect key="frame" x="36" y="145" width="69" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contacts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nih-WM-kr2">
+                                        <rect key="frame" x="36" y="140" width="69" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -63,43 +63,43 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="4pI-Ci-elF" firstAttribute="trailing" secondItem="rIm-Ts-DgR" secondAttribute="trailing" constant="-20" id="8LZ-p7-wPE"/>
-                                    <constraint firstAttribute="trailing" secondItem="rIm-Ts-DgR" secondAttribute="trailing" constant="16" id="9v7-cl-mBG"/>
-                                    <constraint firstItem="rIm-Ts-DgR" firstAttribute="top" secondItem="tRU-Ls-p8w" secondAttribute="top" id="D41-1n-7Qt"/>
-                                    <constraint firstItem="gvh-ri-evY" firstAttribute="leading" secondItem="4pI-Ci-elF" secondAttribute="leading" id="MpZ-po-Qub"/>
-                                    <constraint firstAttribute="bottom" secondItem="4pI-Ci-elF" secondAttribute="bottom" constant="50" id="Ngk-Un-bDH"/>
-                                    <constraint firstItem="4pI-Ci-elF" firstAttribute="leading" secondItem="rIm-Ts-DgR" secondAttribute="leading" constant="20" id="Y5l-JR-euy"/>
-                                    <constraint firstItem="4pI-Ci-elF" firstAttribute="top" secondItem="rIm-Ts-DgR" secondAttribute="bottom" constant="16" id="a3a-9X-WaM"/>
-                                    <constraint firstItem="gvh-ri-evY" firstAttribute="top" secondItem="4pI-Ci-elF" secondAttribute="bottom" constant="22" id="k2h-yd-Dww"/>
-                                    <constraint firstItem="rIm-Ts-DgR" firstAttribute="leading" secondItem="tRU-Ls-p8w" secondAttribute="leading" constant="16" id="yZB-FM-cQD"/>
+                                    <constraint firstItem="Nih-WM-kr2" firstAttribute="top" secondItem="Ohh-oJ-rwU" secondAttribute="bottom" constant="22" id="26e-ZN-MhL"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ohh-oJ-rwU" secondAttribute="bottom" constant="50" id="Shh-II-DaN"/>
+                                    <constraint firstItem="MUi-Is-aH5" firstAttribute="leading" secondItem="XUc-K2-kPR" secondAttribute="leading" constant="16" id="Uut-Ie-g0G"/>
+                                    <constraint firstItem="Ohh-oJ-rwU" firstAttribute="top" secondItem="MUi-Is-aH5" secondAttribute="bottom" constant="16" id="XM1-FX-Z5U"/>
+                                    <constraint firstItem="Nih-WM-kr2" firstAttribute="leading" secondItem="Ohh-oJ-rwU" secondAttribute="leading" id="m6t-u8-Uwo"/>
+                                    <constraint firstItem="MUi-Is-aH5" firstAttribute="top" secondItem="XUc-K2-kPR" secondAttribute="top" id="oOD-DT-0LQ"/>
+                                    <constraint firstItem="Ohh-oJ-rwU" firstAttribute="leading" secondItem="MUi-Is-aH5" secondAttribute="leading" constant="20" id="uQN-rM-HP3"/>
+                                    <constraint firstItem="Ohh-oJ-rwU" firstAttribute="trailing" secondItem="MUi-Is-aH5" secondAttribute="trailing" constant="-20" id="v7T-j9-sGg"/>
+                                    <constraint firstAttribute="trailing" secondItem="MUi-Is-aH5" secondAttribute="trailing" constant="16" id="zhT-dh-PTJ"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cAZ-O8-hJO">
-                                <rect key="frame" x="0.0" y="229" width="414" height="633"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7KX-HX-hWF">
+                                <rect key="frame" x="0.0" y="180" width="375" height="487"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="XcF-7s-VQe"/>
+                        <viewLayoutGuide key="safeArea" id="DgV-MV-dVZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cAZ-O8-hJO" firstAttribute="top" secondItem="tRU-Ls-p8w" secondAttribute="bottom" constant="12" id="AS0-0D-ykX"/>
-                            <constraint firstItem="XcF-7s-VQe" firstAttribute="bottom" secondItem="cAZ-O8-hJO" secondAttribute="bottom" id="GMj-YH-v2A"/>
-                            <constraint firstItem="tRU-Ls-p8w" firstAttribute="leading" secondItem="XcF-7s-VQe" secondAttribute="leading" id="ajQ-v3-6le"/>
-                            <constraint firstItem="XcF-7s-VQe" firstAttribute="trailing" secondItem="tRU-Ls-p8w" secondAttribute="trailing" id="eUi-LP-lG3"/>
-                            <constraint firstItem="tRU-Ls-p8w" firstAttribute="top" secondItem="XcF-7s-VQe" secondAttribute="top" id="kfX-ge-swg"/>
-                            <constraint firstItem="XcF-7s-VQe" firstAttribute="trailing" secondItem="cAZ-O8-hJO" secondAttribute="trailing" id="pEP-ND-RWD"/>
-                            <constraint firstItem="cAZ-O8-hJO" firstAttribute="leading" secondItem="XcF-7s-VQe" secondAttribute="leading" id="q5R-JY-QYh"/>
+                            <constraint firstItem="7KX-HX-hWF" firstAttribute="top" secondItem="XUc-K2-kPR" secondAttribute="bottom" constant="12" id="1NS-Yg-P5c"/>
+                            <constraint firstItem="DgV-MV-dVZ" firstAttribute="trailing" secondItem="7KX-HX-hWF" secondAttribute="trailing" id="4Rc-W7-TWI"/>
+                            <constraint firstItem="DgV-MV-dVZ" firstAttribute="bottom" secondItem="7KX-HX-hWF" secondAttribute="bottom" id="Mjw-mI-czr"/>
+                            <constraint firstItem="7KX-HX-hWF" firstAttribute="leading" secondItem="DgV-MV-dVZ" secondAttribute="leading" id="h0F-1W-vR9"/>
+                            <constraint firstItem="XUc-K2-kPR" firstAttribute="leading" secondItem="DgV-MV-dVZ" secondAttribute="leading" id="iBF-UD-NVI"/>
+                            <constraint firstItem="XUc-K2-kPR" firstAttribute="top" secondItem="DgV-MV-dVZ" secondAttribute="top" id="j8i-7N-ozu"/>
+                            <constraint firstItem="DgV-MV-dVZ" firstAttribute="trailing" secondItem="XUc-K2-kPR" secondAttribute="trailing" id="zsC-lP-ZsW"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addGroup" destination="ibs-ai-geR" id="Dn4-50-2DX"/>
-                        <outlet property="contactLabel" destination="gvh-ri-evY" id="Spx-yd-X39"/>
-                        <outlet property="searchBar" destination="Xmd-ro-ch3" id="uNL-D5-tww"/>
-                        <outlet property="separatorView" destination="4pI-Ci-elF" id="BYk-qT-nFV"/>
-                        <outlet property="tableView" destination="cAZ-O8-hJO" id="Xh3-VN-EpO"/>
+                        <outlet property="addGroup" destination="rRr-XA-nV6" id="uee-Tn-dur"/>
+                        <outlet property="contactLabel" destination="Nih-WM-kr2" id="2RM-hY-uQk"/>
+                        <outlet property="searchBar" destination="Dhz-ek-fv1" id="mpI-c5-ciF"/>
+                        <outlet property="separatorView" destination="Ohh-oJ-rwU" id="hFh-iE-Ciz"/>
+                        <outlet property="tableView" destination="7KX-HX-hWF" id="P14-nX-w0f"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KHl-lC-3nE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s9J-Y0-fnH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="84" y="159"/>
         </scene>
