--- a/iOS-combine/Modules/CreateGroup/Cell/CreateGroupCell.xib
+++ b/iOS-combine/Modules/CreateGroup/Cell/CreateGroupCell.xib
@@ -10,20 +10,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="KGk-i7-Jjw" customClass="CreateGroupCell" customModule="Chat_Demo_IOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="6Jh-Cf-vbn" customClass="CreateGroupCell" customModule="IOS_combine" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Jh-Cf-vbn" id="tuY-No-y0h">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="xiX-zz-GTB">
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="4iL-Bs-9X4">
                         <rect key="frame" x="16" y="10" width="133" height="24"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User" translatesAutoresizingMaskIntoConstraints="NO" id="T9S-cD-j2T">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User" translatesAutoresizingMaskIntoConstraints="NO" id="UVc-8g-k4o">
                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jason Bailey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eR1-RF-EWb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jason Bailey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcc-m0-3Tb">
                                 <rect key="frame" x="38" y="0.0" width="95" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -31,40 +31,40 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fd5-qr-Lmz">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XRW-pm-xNv">
                         <rect key="frame" x="16" y="50" width="288" height="1"/>
                         <color key="backgroundColor" name="AppDarkGreenColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="85w-Jp-DAf"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="kTA-j2-WQo"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="LRL-qW-3Ua"/>
+                            <constraint firstAttribute="height" constant="1" id="jv6-z3-QBS"/>
                         </constraints>
                     </view>
-                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XCo-oA-vWl">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C8g-Xx-NFE">
                         <rect key="frame" x="274" y="7" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="ZS1-cs-bMj"/>
-                            <constraint firstAttribute="width" constant="30" id="c7B-FJ-LuB"/>
+                            <constraint firstAttribute="height" constant="30" id="U6q-Tf-q3N"/>
+                            <constraint firstAttribute="width" constant="30" id="q0w-QY-O6K"/>
                         </constraints>
                         <state key="normal" image="left-arrow"/>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="xiX-zz-GTB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="GAj-xr-zZN"/>
-                    <constraint firstItem="Fd5-qr-Lmz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="KpB-NA-Ws6"/>
-                    <constraint firstItem="Fd5-qr-Lmz" firstAttribute="top" secondItem="xiX-zz-GTB" secondAttribute="bottom" constant="16" id="MCu-CO-7oD"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Fd5-qr-Lmz" secondAttribute="bottom" priority="250" constant="23" id="TFC-zj-jgf"/>
-                    <constraint firstItem="XCo-oA-vWl" firstAttribute="centerY" secondItem="xiX-zz-GTB" secondAttribute="centerY" id="fso-g8-AVo"/>
-                    <constraint firstItem="XCo-oA-vWl" firstAttribute="trailing" secondItem="Fd5-qr-Lmz" secondAttribute="trailing" id="gth-yw-moJ"/>
-                    <constraint firstItem="Fd5-qr-Lmz" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="nxL-uj-wUE"/>
-                    <constraint firstItem="xiX-zz-GTB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="zHA-lo-RTi"/>
+                    <constraint firstItem="C8g-Xx-NFE" firstAttribute="trailing" secondItem="XRW-pm-xNv" secondAttribute="trailing" id="24A-3s-KvF"/>
+                    <constraint firstItem="C8g-Xx-NFE" firstAttribute="centerY" secondItem="4iL-Bs-9X4" secondAttribute="centerY" id="6qf-Xl-QrF"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XRW-pm-xNv" secondAttribute="bottom" priority="250" constant="23" id="Bjy-99-wj5"/>
+                    <constraint firstItem="XRW-pm-xNv" firstAttribute="centerX" secondItem="tuY-No-y0h" secondAttribute="centerX" id="Is0-ch-sb4"/>
+                    <constraint firstItem="4iL-Bs-9X4" firstAttribute="leading" secondItem="tuY-No-y0h" secondAttribute="leading" constant="16" id="R9s-6Z-j3e"/>
+                    <constraint firstItem="4iL-Bs-9X4" firstAttribute="top" secondItem="tuY-No-y0h" secondAttribute="top" constant="10" id="mgS-iD-FPR"/>
+                    <constraint firstItem="XRW-pm-xNv" firstAttribute="leading" secondItem="tuY-No-y0h" secondAttribute="leading" constant="16" id="qv9-8S-dqx"/>
+                    <constraint firstItem="XRW-pm-xNv" firstAttribute="top" secondItem="4iL-Bs-9X4" secondAttribute="bottom" constant="16" id="tBC-hR-qkF"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="7aE-y0-AzQ"/>
             <connections>
-                <outlet property="tickImage" destination="XCo-oA-vWl" id="Ydk-jN-xNQ"/>
-                <outlet property="userName" destination="eR1-RF-EWb" id="HYv-ay-iVW"/>
+                <outlet property="tickImage" destination="C8g-Xx-NFE" id="Aib-xw-oQ0"/>
+                <outlet property="userName" destination="Dcc-m0-3Tb" id="dDA-mb-POK"/>
             </connections>
-            <point key="canvasLocation" x="3" y="43"/>
+            <point key="canvasLocation" x="106" y="7"/>
         </tableViewCell>
     </objects>
     <resources>
